cmake_minimum_required(VERSION 3.1.0)
project(subnettergui VERSION 0.0.1)
set(CMAKE_CXX_STANDARD 23)

include_directories(include)
include_directories(include/random)
include_directories(include/GLFW)
include_directories(include/GL)
include_directories(include/imgui)
include_directories(include/implot3d)
include_directories(include/subnetter)

add_library(glew STATIC IMPORTED)
add_library(glfw3 STATIC IMPORTED)
add_library(imgui STATIC 
    lib/imgui/imgui.cpp lib/imgui/imgui_impl_glfw.cpp lib/imgui/imgui_impl_opengl3.cpp lib/imgui/imgui_draw.cpp 
    lib/imgui/imgui_tables.cpp lib/imgui/imgui_widgets.cpp lib/imgui/imgui_demo.cpp)
add_library(implot3d STATIC lib/implot3d/implot3d.cpp lib/implot3d/implot3d_demo.cpp lib/implot3d/implot3d_items.cpp 
    lib/implot3d/implot3d_meshes.cpp)

IF (WIN32)
    set(CMAKE_EXE_LINKER_FLAGS "/NODEFAULTLIB:LIBCMT /NODEFAULTLIB:MSVCRT /IGNORE:4099")
    add_executable(subnettergui WIN32 src/main.cpp)
    set_target_properties(glew PROPERTIES IMPORTED_LOCATION "./bin/glew/win32/glew32s.lib")
    set_target_properties(glfw3 PROPERTIES IMPORTED_LOCATION "./bin/glfw/win32/glfw3.lib")
    target_link_libraries(subnettergui PRIVATE opengl32 glew)
ELSEIF (UNIX)
    add_executable(subnettergui src/main.cpp)
    set_target_properties(glew PROPERTIES IMPORTED_LOCATION "./bin/glew/linux32/libGLEW.a")
    set_target_properties(glfw3 PROPERTIES IMPORTED_LOCATION "./bin/glfw/linux32/libglfw3.a")
    target_link_libraries(subnettergui PRIVATE GL glew glfw3)
ELSE ()
    add_executable(subnettergui src/main.cpp)
    target_link_libraries(subnettergui PRIVATE GL glew glfw3)
ENDIF()

target_compile_definitions(subnettergui PRIVATE GLEW_STATIC)
target_link_libraries(subnettergui PRIVATE imgui)
target_link_libraries(subnettergui PRIVATE glfw3)
target_link_libraries(subnettergui PRIVATE implot3d)